Update and rename landing.html to index.html

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <a href="#ejemplos">Ejemplos</a>
         <a href="#fondo">Quitar fondo</a>
         <a href="#transform">Transformación</a>
-        <a class="cta" href="https://enhancestar.online" target="_blank" rel="noopener">Ir a EnhanceStar</a>
+        <a class="cta" src="app.html" target="_blank" rel="noopener">Ir a EnhanceStar</a>
       </div>
     </div>
   </nav>
@@ -636,3 +636,4 @@
   </script>
 </body>
 </html>
+
