--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <a href="#ejemplos">Ejemplos</a>
         <a href="#fondo">Quitar fondo</a>
         <a href="#transform">Transformación</a>
-        <a class="cta" src="app.html" target="_blank" rel="noopener">Ir a EnhanceStar</a>
+        <a class="cta" href="app.html" target="_blank" rel="noopener">Ir a EnhanceStar</a>
       </div>
     </div>
   </nav>
@@ -343,7 +343,7 @@
         <a class="btn btn-primary" href="#ejemplos">Ver ejemplos</a>
         <a class="btn" href="#fondo">Quitar fondo</a>
         <a class="btn btn-outline" href="#transform">Ver transformación</a>
-        <a class="btn" href="https://enhancestar.online" target="_blank" rel="noopener">Entrar a EnhanceStar</a>
+        <a class="btn" href="app.html" target="_blank" rel="noopener">Entrar a EnhanceStar</a>
       </div>
     </div>
   </header>
@@ -636,4 +636,5 @@
   </script>
 </body>
 </html>
+
 
